--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
 deepl==1.18.0
+dj-database-url==2.2.0
 Django==5.0.6
 gunicorn==22.0.0
 idna==3.7
