--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ gunicorn==22.0.0
 idna==3.7
 lxml==5.2.2
 packaging==24.1
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 requests==2.32.3
 soupsieve==2.5
