--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==5.0.6
 gunicorn==22.0.0
 idna==3.7
 lxml==5.2.2
+mysqlclient==2.2.4
 packaging==24.1
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
