--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,22 @@
-<<<<<<< HEAD
-Django==5.0.6   # Django3.1
-mysqlclient==2.2.4
 asgiref==3.8.1
 beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
 deepl==1.18.0
 dj-database-url==2.2.0
+Django==5.0.6
+django-livereload-server==0.5.1
 gunicorn==22.0.0
 idna==3.7
 lxml==5.2.2
-packaging==24.1
-psycopg2-binary==2.9.9
-python-dotenv==1.0.1
-requests==2.32.3
-soupsieve==2.5
-sqlparse==0.5.0
-typing_extensions==4.12.2
-urllib3==2.2.2
-whitenoise==6.7.0
-
-
-# asgiref==3.8.1
-# beautifulsoup4==4.12.3
-# certifi==2024.7.4
-# charset-normalizer==3.3.2
-# deepl==1.18.0
-# dj-database-url==2.2.0
-# Django==5.0.6
-# gunicorn==22.0.0
-# idna==3.7
-# lxml==5.2.2
-# mysqlclient==2.2.4
-# packaging==24.1
-# psycopg2-binary==2.9.9
-# python-dotenv==1.0.1
-# requests==2.32.3
-# soupsieve==2.5
-# sqlparse==0.5.0
-# typing_extensions==4.12.2
-# urllib3==2.2.2
-# whitenoise==6.7.0
-=======
-Django==5.0.6   # Django3.1
 mysqlclient==2.2.4
-asgiref==3.8.1
-beautifulsoup4==4.12.3
-certifi==2024.7.4
-charset-normalizer==3.3.2
-deepl==1.18.0
-dj-database-url==2.2.0
-gunicorn==22.0.0
-idna==3.7
-lxml==5.2.2
 packaging==24.1
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 requests==2.32.3
 soupsieve==2.5
 sqlparse==0.5.0
+tornado==6.4.1
 typing_extensions==4.12.2
 urllib3==2.2.2
 whitenoise==6.7.0
-
-
-# asgiref==3.8.1
-# beautifulsoup4==4.12.3
-# certifi==2024.7.4
-# charset-normalizer==3.3.2
-# deepl==1.18.0
-# dj-database-url==2.2.0
-# Django==5.0.6
-# gunicorn==22.0.0
-# idna==3.7
-# lxml==5.2.2
-# mysqlclient==2.2.4
-# packaging==24.1
-# psycopg2-binary==2.9.9
-# python-dotenv==1.0.1
-# requests==2.32.3
-# soupsieve==2.5
-# sqlparse==0.5.0
-# typing_extensions==4.12.2
-# urllib3==2.2.2
-# whitenoise==6.7.0
->>>>>>> publish_master
