--- a/requirements.txt
+++ b/requirements.txt
@@ -3,20 +3,28 @@ beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
 deepl==1.18.0
+distlib==0.3.8
 dj-database-url==2.2.0
 Django==5.0.6
+django-dbbackup==4.2.1
 django-livereload-server==0.5.1
+filelock==3.15.4
+git-filter-repo==2.45.0
 gunicorn==22.0.0
 idna==3.7
 lxml==5.2.2
 mysqlclient==2.2.4
 packaging==24.1
+pipenv==2024.0.1
+platformdirs==4.2.2
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
 soupsieve==2.5
 sqlparse==0.5.0
 tornado==6.4.1
 typing_extensions==4.12.2
 urllib3==2.2.2
+virtualenv==20.26.3
 whitenoise==6.7.0
