--- a/requirements.txt
+++ b/requirements.txt
@@ -8,21 +8,26 @@ dj-database-url==2.2.0
 Django==5.0.6
 django-dbbackup==4.2.1
 django-livereload-server==0.5.1
+dropbox==12.0.2
 filelock==3.15.4
 git-filter-repo==2.45.0
 gunicorn==22.0.0
 idna==3.7
 lxml==5.2.2
+mysql-connector-python==9.0.0
 mysqlclient==2.2.4
 packaging==24.1
 pipenv==2024.0.1
 platformdirs==4.2.2
+ply==3.11
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
+six==1.16.0
 soupsieve==2.5
 sqlparse==0.5.0
+stone==3.3.1
 tornado==6.4.1
 typing_extensions==4.12.2
 urllib3==2.2.2
