--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 asgiref==3.8.1
 beautifulsoup4==4.12.3
 certifi==2024.7.4
+cffi==1.17.1
 charset-normalizer==3.3.2
+cryptography==43.0.3
 deepl==1.18.0
+defusedxml==0.8.0rc2
 distlib==0.3.8
 dj-database-url==2.2.0
 Django==5.0.6
+django-cors-headers==3.4.0
 django-dbbackup==4.2.1
 django-livereload-server==0.5.1
+django-templated-mail==1.1.1
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+djoser==2.2.3
 dropbox==12.0.2
 filelock==3.15.4
 git-filter-repo==2.45.0
@@ -16,15 +24,23 @@ idna==3.7
 lxml==5.2.2
 mysql-connector-python==9.0.0
 mysqlclient==2.2.4
+oauthlib==3.2.2
 packaging==24.1
+pillow==11.0.0
 pipenv==2024.0.1
 platformdirs==4.2.2
 ply==3.11
 psycopg2-binary==2.9.9
+pycparser==2.22
+PyJWT==2.9.0
 python-dotenv==1.0.1
+python3-openid==3.2.0
 pytz==2024.2
 requests==2.32.3
+requests-oauthlib==2.0.0
 six==1.16.0
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
 soupsieve==2.5
 sqlparse==0.5.0
 stone==3.3.1
