readme and .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,32 @@
 DEBUG = False
 
 ## DEEPLから無料のAPIキーを取得してください。 https://www.deepl.com/ja/your-account/keys
-## ただし、これがなくてもアプリは動きます（英単語の意味の一部が取得されない）
+## ただし、これがなくてもアプリは動きます（英単語の意味の一部がnot getになる）
 DEEPL_SECRET_KEY = "your-deaple-api-key"
 
-BATCH_CHECK_TABLE1 = "your-table-name-1"
-BATCH_CHECK_TABLE2 = "your-table-name-2"
 
 ## 任意の文字列で、十分に長く（50文字以上）、予測困難なものを入力してください。
 DJANGO_SECRET_KEY = "your-django-secret-key"
 
+## 実運用でアプリがホストされるhttpsアドレスを入力します。
 HEROKU_APP_COM = ''
 
+## Readmeを参考に入れてください。
 DB_NAME = "your-database-name"
-
 DB_USER = "your-database-user"
-
 DB_PASSWORD = "your-database-password"
-
 DB_HOST = "your-database-host"
-
 MYSQL_ROOT_PASSWORD = "your-mysql-root-password"
 
-BATCH_CHECK_TABLE1 = 'your-table-name-1'
 
+## バッチファイル用途なので、記載しなくても動きます。
+BATCH_CHECK_TABLE1 = 'your-table-name-1'
 BATCH_CHECK_TABLE2 = 'your-table-name-2'
 
 
-# OPEN_AIからキーを取得してください。こちらがなくてもアプリは稼働します（画像生成バッチが動かないのみ）#
+# OPEN_AIからキーを取得してください。
+# ただしこちらがなくてもアプリは稼働します（画像生成バッチが機能しない）#
 OPEN_AI_KEY = "your-openai-api-key"
 
-# OPEN AIのAPIへのプロンプト入力。このままで可。
+# OPEN AIのAPIへの英単語出力用のプロンプトを入力します。このままで可。
 WORD_PROMPT = ""
