--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DEEPL_SECRET_KEY = "your-deaple-api-key"
 ## 任意の文字列で、十分に長く（50文字以上）、予測困難なものを入力してください。
 DJANGO_SECRET_KEY = "your-django-secret-key"
 
-## 実運用でアプリがホストされるhttpsアドレスを入力します。
+## 本番運用でアプリがホストされるhttpsアドレスを入力します。
 HEROKU_APP_COM = ''
 
 ## Readmeを参考に入れてください。
@@ -16,7 +16,6 @@ DB_NAME = "your-database-name"
 DB_USER = "your-database-user"
 DB_PASSWORD = "your-database-password"
 DB_HOST = "your-database-host"
-MYSQL_ROOT_PASSWORD = "your-mysql-root-password"
 
 
 ## バッチファイル用途なので、記載しなくても動きます。
@@ -25,7 +24,7 @@ BATCH_CHECK_TABLE2 = 'your-table-name-2'
 
 
 # OPEN_AIからキーを取得してください。
-# ただしこちらがなくてもアプリは稼働します（画像生成バッチが機能しない）#
+# ただしキーがなくてもアプリは稼働します（画像生成バッチが機能しない）#
 OPEN_AI_KEY = "your-openai-api-key"
 
 # OPEN AIのAPIへの英単語出力用のプロンプトを入力します。このままで可。
