--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DEEPL_SECRET_KEY = "your-deaple-api-key"
 ## 任意の文字列で、十分に長く（50文字以上）、予測困難なものを入力してください。
 DJANGO_SECRET_KEY = "your-django-secret-key"
 
-## 本番運用でアプリがホストされるhttpsアドレスを入力します。
+## 本番運用でアプリがホストされるhttpsアドレスを入力します。空欄でも開発環境では動きます。
 HEROKU_APP_COM = ''
 
 ## Readmeを参考に入れてください。
@@ -18,7 +18,7 @@ DB_PASSWORD = "your-database-password"
 DB_HOST = "your-database-host"
 
 
-## バッチファイル用途なので、記載しなくても動きます。
+## スケジュール実行されるバッチファイル用途です。現状維持でも可です。
 BATCH_CHECK_TABLE1 = 'your-table-name-1'
 BATCH_CHECK_TABLE2 = 'your-table-name-2'
 
